altered dropdown positioning to prevent unwanted shifting

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,15 @@ header {
   color: var(--concrete-path);
 }
 
+#destination-menu {
+  /* display: flex;
+  flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: flex-start; */
+  /* height: auto;
+  width: 100%; */
+}
+
 .switchToggle{
   width: 70%;
   height: auto;
@@ -106,15 +115,16 @@ header {
 }
 
 .pathfinder {
+  z-index: 5000;
   width: 90%;
-  height: 15vh;
+  height: 100px;
   background-color: var(--paths);
   display: grid;
   grid-template-areas:  "switchToggle startlabel start go-btn"
                         "switchToggle endlabel end go-btn";
   grid-template-columns: 7% 13% 65% 15%;
-  position: absolute;
-  top: 8vh;
+  position: fixed;
+  top: 63px;
   left: 5vw;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -127,6 +137,7 @@ header {
   background-color: var(--go-button);
   padding: 0 0.5rem;
   width: 100%;
+  border-radius: 5px;
 }
 
 .pathfinder ul li:hover, .pathfinder ul li:focus {
@@ -134,16 +145,16 @@ header {
 }
 
 .path-start-select, .path-end-select {
-  width: 80%;
+  width: 85%;
   height: auto;
   border-radius: 1vh;
   border: 1.5px solid var(--concrete-path);
-  font-size: 2.7vh;
-  background-color: var(--paths);
+  font-size: 2.5vh;
+  background-color: var(--paths-light);
   padding: 1px 2px;
 }
 
-.placeholder-end{
+.placeholder-end, .placeholder-start{
   color: var(--concrete-path);
   font-family: "ButtonFont";
 }
@@ -206,7 +217,6 @@ header {
   cursor: pointer;
   grid-template-areas:"goButtonIcon"
                       "button";
-  
   flex-direction: column;
   align-items: flex-start;
   
@@ -228,13 +238,13 @@ button {
 
 .destination-select {
   width: 95vw;
-  height: 6vh;
+  height: 30px;
+  min-height: 50px;
 	background: var(--paths);
 	border-radius: 1vh;
 	border: 1.5px solid var(--concrete-path);
-	z-index: 9000;
-	position: absolute;
-	top: 2.5%;
+	position: fixed;
+	top: 15px;
 	left: 2.5vw;
 }
 
@@ -514,7 +524,7 @@ label h4 {
 }
 /* portrait tablets and large phones */
 @media only screen and (min-width: 600px) {
-    .destination-select, footer{
+    .destination-select, .pathfinder, footer{
 		display: none !important;
 	}
    
@@ -526,7 +536,7 @@ label h4 {
 /* STYLES FOR LARGE DISPLAYS - landscape tablets, destop*/
 
 @media only screen and (min-width: 769px) {
-	.destination-select, footer {
+	.destination-select, .pathfinder, footer {
 		display: none !important;
 	}
  
